gotta switch branches, don't trust stash

--- a/src/qtool/CMakeLists.txt
+++ b/src/qtool/CMakeLists.txt
@@ -72,6 +72,7 @@ add_subdirectory( viewer )
 add_subdirectory( offline )
 add_subdirectory( remote )
 add_subdirectory( overseer )
+add_subdirectory( network )
 
 ######### The main QTool executable
 
@@ -106,5 +107,6 @@ target_link_libraries(
   viewer
   remote
   overseer_client
+  network
   ${QT_LIBRARIES}
   )
