--- a/src/tool/CMakeLists.txt
+++ b/src/tool/CMakeLists.txt
@@ -23,6 +23,7 @@ add_subdirectory( ../portals ${CMAKE_CURRENT_BINARY_DIR}/portals )
 include_directories( ../portals )
 
 add_subdirectory( unlog )
+add_subdirectory( visionsim )
 
 # Qt4 goodness
 Qt4_wrap_cpp( tool_headers_moc ${tool_headers} )
@@ -36,5 +37,6 @@ target_link_libraries(
   ${TOOL_EXECUTABLE}
   portals
   unlog
+  visionsim
   ${QT_LIBRARIES}
   )
