Builds log module from the tool. A bit hackish.

--- a/src/tool/CMakeLists.txt
+++ b/src/tool/CMakeLists.txt
@@ -9,6 +9,8 @@ find_package( Qt4 REQUIRED )
 include( ${QT_USE_FILE} )
 add_definitions( ${QT_DEFINITIONS} )
 
+include( ../man/cmake/FindPROTOBUF.cmake )
+
 # Sources
 set( tool_srcs main.cpp
   Tool.cpp
@@ -21,6 +23,19 @@ set( tool_headers
 # Compile portals into portals folder
 add_subdirectory( ../portals ${CMAKE_CURRENT_BINARY_DIR}/portals )
 include_directories( ../portals )
+
+# Compile messages and make them available
+add_subdirectory( ../messages ${CMAKE_CURRENT_BINARY_DIR}/messages )
+include_directories( ../messages )
+include_directories( ${CMAKE_CURRENT_BINARY_DIR}/messages )
+
+# Borrow common for log...
+add_subdirectory( ../man/common ${CMAKE_CURRENT_BINARY_DIR}/common )
+include_directories( ../man/common )
+
+# Borrow a log module from man
+add_subdirectory( ../man/log ${CMAKE_CURRENT_BINARY_DIR}/log )
+include_directories( ../man )
 
 add_subdirectory( unlog )
 add_subdirectory( visionsim )
